# vms-nguyenluan

./: .env.example  .gitignore  DOCKER_SETUP.md  Makefile  PROGRESS.md  QUICKSTART.md  README.md  README.md.old  docker-compose.yml  ecosystem.config.js  run-recorder-simple.sh  start.sh  test-recorder.sh  test-single-camera.sh
data/benchmark/: benchmark_results.csv  benchmark_results.txt
database/: init.sql
database/migrations/: 001_update_recordings_schema.sql  002_create_user_activity_table.sql
docs/: API_BACKEND_PLAN.md  CLEANUP_SUMMARY.md  CURRENT_PERFORMANCE_BASELINE.md  DOCUMENTATION_AUDIT.md  DOCUMENTATION_CLEANUP_PROPOSAL.md  FINAL_SOLUTION.md  FRONTEND_PLAN.md  PHASE_6_7_8_TASK_LIST.md  PHASE_6_PROGRESS.md  PM2_OPERATIONS.md  QUICK_START.md  README.md  REORGANIZATION_SUMMARY.md  ROADMAP.md  ROOT_DOCS_CLEANUP_SUMMARY.md  SYSTEM_ARCHITECTURE_FINAL.md  TASK_1_2_3_SUMMARY.md
docs/analysis/: 01_Tong_quan_kien_truc.md  05_Storage_Network_Security.md  06_Streaming_Gateway.md  08_UI_React.md  13_Implementation_Summary.md  15_Single_Stream_Architecture.md
scripts/: reset-admin-password.js  test_h265_encoding.py  test_multi_output.sh  test_multi_simple.sh  test_vaapi_live.py  test_vaapi_live.sh
services/recorder/: CMakeLists.txt
services/recorder/src/: camera_manager.hpp  camera_recorder.hpp  config.hpp  database.hpp  encoder_detector.hpp  ffmpeg_multi_output.hpp  ffmpeg_process.hpp  gpu_selector.hpp  live_transcoder.hpp  logger.hpp  main.cpp  mediamtx_health.hpp  storage_manager.hpp  stream_analyzer.hpp
tools/: quality_benchmark.sh  verify_bitrate.sh
(+118 files in other folders)
